--- a/csp.html
+++ b/csp.html
@@ -13,7 +13,19 @@
 			width: 630px;
 			height: 630px;
 		}
-		#picker{
+		#info{
+			margin: 10px;
+		}
+		#info input{
+			-webkit-flex: 2;
+			flex: 2;
+			text-align: center;
+		}
+		#info label{
+			-webkit-flex: 1;
+			flex: 1;
+		}
+		#picker, #info{
 			text-align: center;
 			display: -webkit-flex;
 			display: flex;
@@ -37,10 +49,22 @@
 		.chrome{
 			color: blue;
 		}
+		.off{
+			color: red;
+		}
+		.on{
+			color: blue;
+		}
 	</style>
 </head>
 <body>
 	<div id="wrapper">
+		<section id="info">
+			<label for="turn">Turn:</label>
+			<input id="turn" type="text" value="White" disabled>
+			<label for="jump">Jump:</label>
+			<input id="jump" class="off" type="text" value="OFF" disabled>
+		</section>
 		<canvas id="cav"></canvas>
 		<section id="picker">
 			<header>Size:</header>
@@ -90,6 +114,8 @@
 				this.squares = [];
 				this.turn = 1;
 				this.pieceRadius = ( this.gapSize - 5 ) / 2 >> 0;
+				this.turnIndicator.value = "White";
+				this.jumpOff();
 
 				for( var c = 0; c < this.boardSize; ++c ){
 					this.squares.push( [] );
@@ -123,6 +149,24 @@
 					ctx.closePath();
 					ctx.stroke();
 				}
+			},
+
+			turnIndicator: document.getElementById("turn"),
+			jumpModeIndicator: document.getElementById("jump"),
+
+			swapTurn: function swapTurn(){
+				this.turn = -this.turn;
+				this.turnIndicator.value = (this.turn > 0)?"White":"Black";
+			},
+
+			jumpOff: function jumpOff(){
+				this.jumpModeIndicator.value = "OFF";
+				this.jumpModeIndicator.className = "off";
+			},
+
+			jumpOn: function jumpOn(){
+				this.jumpModeIndicator.value = "ON";
+				this.jumpModeIndicator.className = "on";
 			},
 
 			place: function place( cellRow, cellCol ){
@@ -163,7 +207,7 @@
 
 				if( !this.squares[cellRow][cellCol] && !Jump ){
 					this.place( cellRow, cellCol );
-					Board.turn = -Board.turn;
+					this.swapTurn();
 					// console.log( 1 );
 				}else if( Jump && !this.squares[cellRow][cellCol] &&
 								this.canJump( cellRow, cellCol, currentRow, currentCol ) ){
@@ -172,13 +216,15 @@
 						// console.log( 2 );
 				}else if( !Jump && this.squares[cellRow][cellCol] == this.turn ){
 					Jump = true;
+					this.jumpOn();
 					currentRow = cellRow;
 					currentCol = cellCol;
 					// console.log( 3 );
 				}else{
 					Jump = false;
+					this.jumpOff();
 					if( commitedJump ){
-						Board.turn = -Board.turn;
+						this.swapTurn();
 						commitedJump = false;
 					}
 					// console.log( 4 );
