added SVG Tree Demo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 			<h1>OK, stuff</h1>
 			<section id="list">
 				<ol>
-					<li><a href="csp.html"><span>CSP tool: Game</span></a></li>
+					<li><a href="sub/csp.html"><span>CSP tool: Game</span></a></li>
+					<li><a href="sub/dots.html"><span>SVG Tree Demo</span></a></li>
 				</ol>
 			</section>
 		</section>
