updated projectx demo to use ajax

--- a/sub/dots.html
+++ b/sub/dots.html
@@ -38,26 +38,8 @@
 	<div id="graph"></div>
 	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<script>
-		var testData = {
-			"name": "Science",
-			"children": [
-				{
-					"name": "science201",
-					"children": [
-						{"name": "science101"}
-					]
-				},
-				{
-					"name": "math201",
-					"children": [
-						{"name": "math101"},
-						{"name": "math102"}
-					]
-				}
-			]
-		};
-
-		(function(data){
+		// d3.json("http://127.0.0.1:8000/ajax/test", function(error, data){
+		d3.json("http://projectxbook.herokuapp.com/ajax/test", function(error, data){
 			var tree = d3.layout.tree()
 			    .size([400, 400])
 			    .separation(
@@ -106,7 +88,7 @@
 			      .text(function(d) { return d.name; });
 
 			})(data);
-		})(testData);
+		});
 	</script>
 </body>
 </html>
